--- a/app/assets/stylesheets/dnd_logs.scss
+++ b/app/assets/stylesheets/dnd_logs.scss
@@ -12,6 +12,17 @@ input {
   width:120px;
 }
 
+.log-list-box {
+  padding: 5px;
+  border:1px solid;
+  border-radius: 5px;
+  background-color: rgb(250, 250, 250);
+}
+
+.log-list {
+  margin: 20px;
+}
+
 footer {
   text-align:center;
 }
